--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 3/1. Gramaticas Limpias y Bien Formadas.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 3/1. Gramaticas Limpias y Bien Formadas.md
@@ -23,7 +23,7 @@ Para limpiar una gramática se requiere utilizar 3 algoritmos o grupo de pasos p
 >[!note] Nota
 >Los símbolos que queden sin marcar son no generativos y pueden eliminarse del alfabeto de símbolos no terminales, como así también las reglas de producción superfluas que los contengan.
 
-Se dice que una ***gramática es reducida*** si no contiene símbolos inaccesibles desde el axioma, símbolos no generativos, ni reglas superfluas. Se dice que una gramática está ***limpia*** si está reducida y no contiene reglas innecesarias. Esto quiere decir que una vez que nosotros apliquemos estos 3 algoritmos obtendremos una gramática bien formada.
+Se dice que una ***gramática es reducida*** si no contiene símbolos inaccesibles desde el axioma, símbolos no generativos, ni reglas superfluas. Se dice que una gramática está ***limpia*** si está reducida y no contiene reglas innecesarias. Esto quiere decir que una vez que nosotros apliquemos estos 3 algoritmos obtendremos una gramática limpia.
 
 ## Gramáticas Bien Formadas
 
