--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 4/2. Máquina Universal de Turing y Computabilidad.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 4/2. Máquina Universal de Turing y Computabilidad.md
@@ -22,7 +22,7 @@ Gracias a la tesis de Turing-Church, si existe un procedimiento efectivo, entonc
 >La tesis de Turing-Church interrelaciona la noción de procedimiento efectivo y máquina de Turing, sabiendo que son estas máquinas y que cosas pueden hacer, se debe saber que cosas las máquinas de Turing no pueden hacer. Se puede categorizar a los problemas de acuerdo a la posibilidad de resolverlos en términos de máquina de Turing.
 >- **Problema de Decisión**: Un problema de decisión (PD) es aquel formulado por una pregunta, referida a alguna propiedad, que requiere una respuesta de tipo “sí/no”. Con esto en mente un problema de decisión es.
 >	- **Soluble**: si existe un algoritmo total para determinar si la propiedad es verdadera, por consecuencia existe una Máquina de Turing que siempre se detiene al resolver el problema.
->	- **Parcialmente soluble**: si existe un algoritmo parcial para determinar si la propiedad es verdadera, o sea existe una Máquina de Turing que resuelve el problema, pero puede que esta no detenga.
+>	- **Parcialmente soluble**: si existe un algoritmo parcial para determinar si la propiedad es verdadera, o sea existe una Máquina de Turing que resuelve el problema, pero puede que esta no se detenga.
 >	- **Insoluble**: si no existe un procedimiento efectivo para determinar si la propiedad es verdadera, entonces no existe una Máquina de Turing.
 >
 >Un problema insoluble de especial importancia en la computación es el ***Problema de Detención*** de máquina de Turing (The Halting Problem). El problema dicta lo siguente: Dada una Máquina de Turing $T$ y una cadena $α$, ¿existe un algoritmo para decidir si $T$ se detendrá comenzando en el estado inicial con $α$ en la cinta?. Alan Turing, a fines de 1930, enunció y demostró que este problema es insoluble.
