--- a/3° Año/Lenguajes de Programación/Unidad 1/2. Paradigmas de Programación.md
+++ b/3° Año/Lenguajes de Programación/Unidad 1/2. Paradigmas de Programación.md
@@ -8,7 +8,7 @@ Son los métodos que orientan el proceso de programación de un componente o sis
 
 ### Clasificación
 
-- **Convencionales** -> son aquellos paradigmas cuyo principal característica es que cuando se escribe un programa en estos lenguajes se deben especificar que es lo que se debe hacer en cada caso, estos son más cercanos a la arquitectura de las computadoras. Ejemplos de esto son los paradigmas imperativo y orientado a objetos.
+- **Convencionales** -> son aquellos paradigmas cuyo principal característica es que cuando se escribe un programa en estos lenguajes se deben especificar como se debe hacer cada tarea, estos son más cercanos a la arquitectura de las computadoras. Ejemplos de esto son los paradigmas imperativo y orientado a objetos.
 - **No convencionales** -> Son aquellos en la que las especificaciones de la resolución de los problemas se hace mediantes una serie de reglas, este tipo de paradigmas se caracteriza porque en las sentencias se declara que se tiene que hacer, no el cómo se tiene que hacer. Ejemplo de estos paradigmas serían el paradigma declarativo o lógico y el aplicativo o funcional.
 
  ---
