--- a/3° Año/Lenguajes de Programación/Unidad 2/2. Semántica.md
+++ b/3° Año/Lenguajes de Programación/Unidad 2/2. Semántica.md
@@ -31,7 +31,7 @@ Uno de los primeros intentos para desarrollar un modelo semántico de un lenguaj
 Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregado una serie de nuevos elementos que van a aportar más información al árbol sintáctico y nos será de utilidad a la hora de la implementación de un analizador semántico. Entre esos elementos se encuentran:
 
 - **Reglas Semánticas**: son un conjunto de funciones que sirve para definir y calcular los valores de los atributos definidos, y están asociados a las reglas de la gramática.
-- **Condiciones**: Son un conjunto de predicados que nos permiten verificar si el valor de los atributos van de acuerdo a las reglas de la gramática.
+- **Condiciones**: Son un conjunto de predicados asociados a las reglas de la gramática que se utiliza para evaluar la consistencia de los atributos, asociados a las reglas de las gramáticas.
 - **Atributos**: Son las propiedades que posee una estructura semántica, la cual es asociada a cada estructura. Estos atributos varían según la información que contienen y en que proceso hayan sido creados. Un ejemplo de lo que podrían llegar a almacenar estos atributos sería: El tipo de una variable, el valor de una expresión, una dirección de memoria. Estos atributos pueden ser:
 	- **Atributos Sintetizados S(x)**: Cuando la información es pasada de abajo hacia arriba entre los distintos nodos del árbol sintáctico. Estos atributos se calculan en los símbolos no terminal a partir de los atributos de sus símbolos hijos. Estos atributos se utilizan para representar información que se "sintetiza" a medida que se construye la cadena del lenguaje (árbol de análisis sintáctico). Un ejemplo de un atributo sintetizado podría ser el número de elementos en una lista, que se calcula a partir de los elementos individuales de la lista.
 	- **Atributos Heredados I(x)**: Cuando la información fluye de arriba hacia abajo entre los distintos nodos del árbol sintáctico. Son atributos que se transfieren desde un símbolo no terminal a uno o más de sus símbolos hijos. Estos atributos se utilizan para representar información que se "hereda" de un nivel de la gramática a otro. Un ejemplo de un atributo heredado podría ser el tipo de dato de una variable en un programa, que se hereda desde la declaración de la variable a su uso posterior en el código.
