--- a/3° Año/Metodología de Sistemas I/Unidad 5/2. Análisis de Flujo de Datos.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 5/2. Análisis de Flujo de Datos.md
@@ -47,7 +47,7 @@ A este diagrama también suelen llamarlo ***diagrama de nivel 0***, a medida que
 
 ![[MS-explosion-procesos.png]]
 
-Un diagrama de contexto no es nada mas que una versión mas simplificada de un diagrama de caso de uso, con la diferencia que este resulta más útil para poder observar las diferentes interacciones entre el sistema y las entidades externas.
+Un diagrama de contexto no es nada mas que una versión mas simplificada de un diagrama de flujo de datos, con la diferencia que este resulta más útil para poder observar las diferentes interacciones entre el sistema y las entidades externas.
 
 >[!tldr] Aspectos a Tener en Cuenta
 >1. Un proceso debe recibir por lo menos un flujo de datos entrante y debe generar por lo menos un flujo de datos saliente.
