Se agrego notas de clases a la parte de procesos

--- a/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
@@ -15,7 +15,7 @@ Cada proceso cuenta con su propio flujo de control (es decir, su propio contador
 >[!tldr] El Proceso es más que un Programa en Ejecución
 >Hay que resaltar que un proceso es algo más que el código de un programa (al que en ocasiones se denomina **sección de texto**) Además del código, un proceso incluye también la actividad actual, que queda representada por el valor del **contador de programa** y por los contenidos de los registros del procesador. Generalmente, un proceso incluye también la **pila** del proceso, que contiene datos temporales (parámetros de las funciones, las direcciones de retorno y las variables locales), y una **sección de datos**, que contiene las variables globales. El proceso puede incluir, asimismo, un **cúmulo de memoria,** que es la memoria que se asigna dinámicamente al proceso en tiempo de ejecución.
 
-<span class="centerImg"> ![[SO-procesos.png]] </span>
+![[SO-procesos.png]]
 
 >[!important] Diferencia entre Programa y Proceso
 > La diferencia entre un proceso y un programa es sutil pero crucial. Un programa es una ***unidad pasiva***, un archivo que contiene una lista de instrucciones almacenadas en disco (denominado **archivo ejecutable**), mientras que un proceso es una ***entidad activa***, con un contador de programa que especifica la siguiente instrucción que hay que ejecutar y un conjunto de recursos asociados. Un programa se convierte en un proceso cuando se carga en memoria un archivo ejecutable.
@@ -43,7 +43,7 @@ A medida que se ejecuta un proceso, el proceso va cambiando de **estado**. El es
 Es importante darse cuenta de que solo puede haber un proceso *ejecutándose* en cualquier procesador en cada instante concreto. Sin embargo, puede haber muchos procesos *preparados* y en *espera*.
 El ciclo normal que sigue un proceso desde su creación hasta su posterior finalización, es el que aparece mostrado en la siguiente imagen:
 
-<span class="centerImg"> ![[SO-estados-proceso.png]] </span>
+![[SO-estados-proceso.png]]
 
 A lo largo de todo el ciclo de vida del proceso, éste puede cambiar de estado varias veces y estos cambios se denominan ***transiciones de estado*** y son las siguientes:
 
@@ -54,11 +54,13 @@ A lo largo de todo el ciclo de vida del proceso, éste puede cambiar de estado v
 - Paso a estado suspendido en espera o bloqueado.
 - Paso a estado suspendido, listo o preparado.
 
+Cuando se suspende un proceso, toda la información que este contenga es mandado a la memoria virtual, si el proceso se encuentra esperando un E/S, se actualizará toda la información necesaria y luego se pondrá en suspenso. Cuando se desee despertar a un proceso suspendido, se debe actualizar la información de su PCB correspondiente, actualizando su prioridad y estado respectivamente.
+
 ## Bloque de control de proceso
 
 Cada proceso se representa en el SO mediante un **bloque de control de proceso** (PCB, process control block), también denominado *bloque de control de tarea*. Un bloque de control de proceso, es una estructura de tamaño estático, que contiene muchos elementos de información asociados con un proceso específico, entre los que se incluyen:
 - **Estado del proceso:** Uno de los cuantos mencionados anteriormente.
-- **Prioridad**: Existen dos tipos de prioridades, la original que es la que le asigna el sistema operativo cuando se crea el proceso, y la dinámica o actual la cual se va incrementando en cada ciclo del Sistema Operativo.
+- **Prioridad**: Existen dos tipos de prioridades, la original que es la que le asigna el sistema operativo cuando se crea el proceso, y la dinámica o actual, la cual se va incrementando en cada ciclo del Sistema Operativo.
 - **Contador de programa:** El contador va a indicar la dirección de la siguiente instrucción que se debe ejecutar el proceso.
 - **Registros de la CPU:** Los registros varían en cuanto a número y tipo, dependiendo de la arquitectura de la computadora. La información de los estados de estos registros debe guardarse junto con el PC cuando se produce una interrupción, para que luego el proceso pueda continuar ejecutándose correctamente.
 - **Información de planificación de la CPU:** Esta información incluye la prioridad del proceso, los punteros a la cola de planificación y cualquier otro parámetro de planificación que se requiera.
@@ -97,3 +99,8 @@ La conmutación de la CPU a otro proceso requiere un salvaguardado del estado de
 >Cada proceso, cuando es creado por el SO mediante el planificador a largo plazo, se le asigna un ***Espacio de direcciones***, el cual es un conjunto de direcciones virtuales que va a ocupar el proceso, éste no está incluido en el PCB, ni en ningunas de las tablas asociadas al proceso. Dentro de este espacio de direcciones se encuentra todo el código que puede ser ejecutado por el proceso. Cada proceso puede acceder a su espacio de direcciones en modo usuario, pero las demás operaciones debe hacerlo en *modo kernel*.
 >El ***Entorno***, por su parte, contiene toda la información del proceso, esto incluye al contexto y al espacio de direcciones de dicho proceso.
 
+## Finalización de Procesos
+
+Cuando un proceso termina, ya sea de forma normal o anormal, lo correspondiente es actualizar la información del disco duro. El primer paso que realiza el sistema operativo es fijarse en que estado se encuentra el proceso, y de acuerdo a eso se optara por realizar una rutina u otra.
+- **Si el proceso se encuentra en Listo o en Espera,** el SO tendrá que primero actualizar el contenido de la memoria al disco duro, Luego se dirigirá al PCB en donde se cerraran todos los archivos que haya estado utilizando el proceso, a su vez se cierran todas las entradas de la ***tabla de recursos*** para luego ser eliminada, algo similar pasa con la tabla de páginas, donde se liberan todos los parcos que integraban la tabla y luego se elimina la tabla, ya como paso final se le des asigna el PCB, quedando este libre para ser utilizado por otro proceso.
+- **Si el proceso se encuentra en Ejecución** el sistema operativo tendrá que realizar una tarea adicional, que consiste en actualizar la memoria principal con el contenido de la caché, para posteriormente realizar los mismos pasos descritos en la situación anterior. 
