--- a/3° Año/Sistemas Operativos/Unidad 2/3. Comunicación Interproceso.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/3. Comunicación Interproceso.md
@@ -14,7 +14,7 @@ Ambos modelos están presentes en casi todos los SO, incluso algunos emplean amb
 La comunicación interproceso que emplea memoria compartida requiere que los procesos que se estén comunicando establezcan una región de memoria común. Normalmente, esta región de memoria compartida reside en el espacio de direcciones del proceso que crea este segmento de memoria. Otros procesos que deseen comunicarse usando este segmento de memoria deben acceder al espacio de direcciones del proceso, esto comúnmente va en contra de las normativas del Sistema Operativo. Es por eso que es necesario que los procesos que desean acceder a este espacio de memoria acuerden eliminar esta restricción, de esta forma podrán intercambiar información a través del área compartida sin problema alguno. Tanto el formato de los datos como la ubicación de estos mismos están determinados por los procesos, y no se encuentra bajo el control del SO, por lo que son estos mismos procesos los que deben verificar de que no se escriban datos en la misma posición simultáneamente.
 En la siguiente imagen se ilustrará como es la puesta en marcha del sistema de memoria compartida
 
-<span class="centerImg"> ![[SO-memoria-compartida.png]] </span>
+![[SO-memoria-compartida.png]]
 
 ## Sistema de Paso de Mensajes
 
