--- a/3° Año/Sistemas Operativos/Unidad 2/4. Hilos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/4. Hilos.md
@@ -16,7 +16,7 @@ Aunque un hilo se debe ejecutar en cierto proceso, el hilo y su proceso son conc
 Lo que agregan los hilos al modelo de procesos es permitir que se lleven a cabo varias ejecuciones en el mismo entorno del proceso, que son en gran parte independientes unas de las otras. En el primer caso, los hilos comparten un espacio de direcciones y otros recursos; en el segundo, los procesos comparten la memoria física, los discos, las impresoras y otros recursos.
 En la figura (a) podemos ver tres procesos tradicionales. Cada proceso tiene su propio espacio de direcciones y un solo hilo de control. Por el contrario, en la figura (b) vemos un solo proceso con tres hilos de control. Aunque en ambos casos tenemos tres hilos, en la figura (a) cada uno de ellos opera en un espacio de direcciones distinto, mientras que en la figura (b) los tres comparten el mismo espacio de direcciones.
 
-<span class="centerImg"> ![[SO-hilos-procesos.png]] </span>
+![[SO-hilos-procesos.png]]
 
 >[!important] Hilos y Seguridad
 >Los distintos hilos en un proceso no son tan independientes como los procesos. Todos los hilos tienen el mismo espacio de direcciones, lo cual significa que también comparten las mismas variables globales. Como cada hilo puede acceder a cada dirección de memoria dentro del espacio de direcciones del proceso, un hilo puede leer, escribir o incluso borrar la pila de otro hilo. No hay protección entre los hilos debido a que:
