Se comodo lo de estadisitica y se agrego mas info sobre las tablas de contingencia

--- a/3° Año/Lenguajes de Programación/Unidad 1/1. Evolución de los Lenguajes de Programación.md
+++ b/3° Año/Lenguajes de Programación/Unidad 1/1. Evolución de los Lenguajes de Programación.md
@@ -4,7 +4,7 @@
 >[!check] Definición segun el Campo de Estudio
 >Un lenguaje de programación es un sistema de notaciones que nos sirve para describir computaciones (operaciones) de una forma legible y entendible tanto para la maquina como para el ser humano
 
-Estos mismos lenguajes se pueden clasificar según su nivel, su jerarquia, la forma de programar con estos mismos y la manera en la que se realizan las instrucciones.
+Estos mismos lenguajes se pueden clasificar según su nivel, su jerarquía, la forma de programar con estos mismos y la manera en la que se realizan las instrucciones.
 
 | Clasificación         |                                                                                              |
 |-----------------------|----------------------------------------------------------------------------------------------|
