--- a/3° Año/Lenguajes de Programación/Unidad 2/1. Sintaxis.md
+++ b/3° Año/Lenguajes de Programación/Unidad 2/1. Sintaxis.md
@@ -25,7 +25,7 @@ El propósito primordial de la sintaxis es proveer una notación para la comunic
 >[!important] Lenguajes de Programación y Legibilidad
 >La legibilidad se mejora a través de características de lenguaje tales como formatos naturales de enunciado, enunciados estructurados, uso abundante de palabras clave y palabras pregonadas, recursos para comentarios incrustados, identificadores de longitud sin restricción, símbolos mnemotécnicos de operadores, formatos de campo libre y declaraciones completas de datos.
 
-- **Facilidad de Escritura**: Utilización de estructuras concisas y regulares. Las características sintácticas que hace que un programa sea fácil de escribir suelen encontrarse en conflicto con las características que facilitan su lectura. Las convenciones sintácticas implícitas, por ejemplo, permiten dejar sin especificar declaraciones y operaciones, haciendo que los programas más más cortos y fáciles de escribir, pero dificultan su lectura.
+- **Facilidad de Escritura**: Utilización de estructuras concisas y regulares. Las características sintácticas que hace que un programa sea fácil de escribir suelen encontrarse en conflicto con las características que facilitan su lectura. Las convenciones sintácticas implícitas, por ejemplo, permiten dejar sin especificar declaraciones y operaciones, haciendo que los programas más cortos y fáciles de escribir, pero dificultan su lectura.
 
 >[!note] Nota
 >Una sintaxis es ***redundante*** si comunica el mismo elemento de información en más de una forma. Cierta redundancia es útil en la sintaxis de lenguajes de programación porque facilita la lectura del programa y también permite revisar en busca de errores durante la traducción. La desventaja es que la redundancia hace a los programas más elocuentes y, por tanto, dificulta su escritura.
@@ -40,7 +40,7 @@ El propósito primordial de la sintaxis es proveer una notación para la comunic
 >[!important] Regularidad vs Legibilidad
 >La traducción de los programas se dificulta conforme aumenta el número de construcciones sintácticas especiales. Por ejemplo, la traducción de COBOL se hace muy difícil a causa del gran número de formas de enunciados y declaraciones que se permiten, no obstante que la semántica del lenguaje no es complicada de manera expresa.
 
-- **Carencia de Ambigüedad**: Idealmente, un solo significado para cada construcción sintáctica que se puede escribir, una construcción se dice que es ambigua si permite dos o más interpretaciones distintas. La ambigüedad es un problema medular en todo diseño de lenguaje. El problema de ambigüedad surge por lo común no en la estructura de elementos individuales de programa, sino en la interacción entre diferentes estructuras.
+- **Carencia de Ambigüedad**: Idealmente, un solo significado para cada construcción sintáctica que se puede escribir, una construcción se dice que es ambigua si permite dos o más interpretaciones distintas. El problema de ambigüedad surge por lo común no en la estructura de elementos individuales de programa, sino en la interacción entre diferentes estructuras.
 
 >[!example] Ejemplo de Ambigüedad
 >Tanto PASCAL como ALGOL permiten dos formas distintas de enunciado condicional:
