Correcciones en metodologias

--- a/3° Año/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
@@ -39,7 +39,7 @@ Tales modelos genéricos no son descripciones definitivas de los procesos de sof
 Es importante aclarar que la existencia de un proceso de desarrollo de software no es garantía de que el software se entregue a tiempo o que satisfaga las necesidades de los clientes.
 
 #### Flujo de Procesos
-
+Se describe la manera en que estan organizadas las actividades estructurales y las acciones y tareas que ocurren dentro de cada una con respecto de la secuencia y el tiempo.
 - Un flujo de proceso lineal ejecuta cada una de las actividades en forma secuencial.
 - Un flujo de proceso iterativo repite una o más de las actividades antes de pasar a la siguiente.
 - Un flujo de proceso evolutivo realiza las actividades en forma “circular”. Cada circuito lleva a una versión más completa del software.
