--- a/3° Año/Metodología de Sistemas I/Unidad 3/1. Requerimientos.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 3/1. Requerimientos.md
@@ -1,4 +1,4 @@
->[!inportant] Definición según IEEE
+>[!important] Definición según IEEE
 >“Un ***requerimiento*** es una condición o capacidad que debe poseer un sistema o un componente de un sistema para satisfacer un contrato, un estándar, una especificación u otro documento formalmente impuesto.”
 
 #### Definición
