--- a/3° Año/Metodología de Sistemas I/Unidad 1/1. Repaso Teoría de Sistemas.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 1/1. Repaso Teoría de Sistemas.md
@@ -5,7 +5,7 @@
 >- Desarrollar un conjunto de leyes aplicables a todos estos comportamientos.
 >- Promover una formalización (matemática) de estas leyes.
 
-<span class="centerImg"> ![[MS-enfoques.png]] </span>
+![[MS-enfoques.png]]
 
 ### Enfoque Reduccionista
 
@@ -21,7 +21,7 @@ Explica los sistemas como un todo y no como una suma de partes. Aborda el proble
 
 ### Elementos de un Sistma
 
-<span class="centerImg"> ![[MS-elementosSistemas.png]] </span>
+![[MS-elementosSistemas.png]]
 
 - **Entrada**: Constituyen los elementos que ingresan al sistema. Son las fierzas de arranque que suministran al sistema sus necesidades operativas.
 - **Proceso**: Constituye la ***transformación*** de las entradas en salidas, como tal puede ser una máquina, un individuo, una computadora, etc. En TGS, existen dos tipos:
@@ -73,7 +73,7 @@ La información como entrada constituye un pilar clave como medio regulador ya q
 >[!info] Fronteras Organizacionales
 > Son las Interrelaciones e interdependencia entre los subsistemas de una organización que a su vez determinan los límites y responsabilidades de este mismo.
 > 
-> <span class="centerImg"> ![[MS-organizacionSistema.png]] </span>
+>![[MS-organizacionSistema.png]]
 
 ---
 
