--- a/3° Año/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
@@ -45,6 +45,6 @@ Se describe la manera en que estan organizadas las actividades estructurales y l
 - Un flujo de proceso evolutivo realiza las actividades en forma “circular”. Cada circuito lleva a una versión más completa del software.
 - Un flujo de proceso paralelo ejecuta una o más actividades en paralelo con otras.
 
-<span class="centerImg"> ![[MS-flujo1.png]] </span>
+![[MS-flujo1.png]]
 
-<span class="centerImg"> ![[MS-flujo2.png]] </span>
+![[MS-flujo2.png]]
