--- a/3° Año/Metodología de Sistemas I/Unidad 3/1. Requerimientos.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 3/1. Requerimientos.md
@@ -28,7 +28,7 @@ Algunos de los problemas que surgen durante el proceso de ingeniería de requeri
 
 Para ver la diferencia de manera más fácil veamos el siguiente ejemplo:
 
-<span class="centerImg"> ![[MS-requerimientos-descripcion.png]] </span>
+![[MS-requerimientos-descripcion.png]]
 
 Como podemos ver, los requerimientos de usuario son más generales, en cambio, los requerimientos de sistemas son más amplios y detalladas, de forma que le sean útiles a los desarrolladores para comenzar a crear las funcionalidades.
 
