--- a/3° Año/Metodología de Sistemas I/Unidad 3/2. Proceso de Ingeniería de Requerimientos.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 3/2. Proceso de Ingeniería de Requerimientos.md
@@ -7,7 +7,7 @@
 
 Estas actividades están organizadas como un proceso iterativo alrededor de una espiral, y la salida es un documento de requerimientos del sistema. La cantidad de tiempo y esfuerzo dedicados a cada actividad en cada iteración depende de la etapa del proceso global y el tipo de sistema que está siendo desarrollado. El número de iteraciones de la espiral tiende a variar, de modo que la espiral terminará después de adquirir algunos o todos los requerimientos del usuario.
 
-<span class="centerImg"> ![[MS-iteraccion-proceso-requerimientos.png]] </span>
+![[MS-iteraccion-proceso-requerimientos.png]]
 
 Como ya se mencionó, todo este proceso genera como resultado un ***documento de requerimientos de software***, que también suele nombrarse como ***especificación de requerimientos de software***. El cual es un comunicado oficial de lo que deben implementar los desarrolladores del sistema, incluye tanto los requerimientos del usuario para un sistema, como una especificación detallada de los requerimientos del sistema, este documento es esencial cuando se contrata a un profesional externo para que desarrolle el software.
 Para realizar estos documentos existe un estándar escrito por el IEEE en el cual se especifica la estructura base con la que debe contar este informe, obviamente no es obligatorio usar esta estructura por completo, ya que de acuerdo al tipo de proyecto que se desee llevar a cabo y como no el proceso que se haya elegido para desarrollar ese proyecto el documento poseerá una u otra sección.
