--- a/3° Año/Metodología de Sistemas I/Unidad 4/1. Herramientas para la documentación de procesos..md
+++ b/3° Año/Metodología de Sistemas I/Unidad 4/1. Herramientas para la documentación de procesos..md
@@ -7,7 +7,7 @@ Para realizar estas especificaciones existen diversas herramientas, como por eje
 
 - **Lenguajes Estructurados**: Estos se basan en la lógica estructurada o las instrucciones organizadas en procedimientos anidados y agrupados. 
 
-<span class="centerImg"> ![[MS-esp-estructurado.png]] </span>
+![[MS-esp-estructurado.png]]
 
 >[!note] Ventajas
 >- Permite aclarar la lógica y las relaciones que se encuentran en el lenguaje humano.
@@ -20,19 +20,19 @@ Para realizar estas especificaciones existen diversas herramientas, como por eje
 >[!note] Ventajas y Ejemplo Práctico
 >- Es fácil de entender y resulta mucho más conveniente cuando se tiene estructuras de decisiones más grandes y complejas.
 >
-><span class="centerImg"> ![[MS-arbol-decisiones-1.png]] </span>
+>![[MS-arbol-decisiones-1.png]]
 >
 >Si bien en este ejemplo ninguno de los nodos está siendo encerrado por un círculo o una caja, lo ideal sería que para las decisiones se empleen círculos y para las acciones finales cajas.
 
 - **Tabla de decisiones**: Son tablas constituidas por 4 secciones, una donde se ponen todas las condiciones, otra donde se agrupan todas las acciones a tomar, una seccione de alternativas de condiciones, la cual se van completando según todas las combinaciones posibles de decisiones y basándonos en estas se selecciona con una X a la acción correspondiente a cada ***regla de condición***.
 
-<span class="centerImg"> ![[MS-tabla-decisiones.png]] </span>
+![[MS-tabla-decisiones.png]]
 
 Pueden ocurrir cuatro problemas principales al desarrollar tablas de decisión, pueden quedar incompletas, pueden suceder situaciones imposibles, contradicciones o redundancias, como vamos a ver en los siguientes ejemplos:
 
-<span class="centerImg"> ![[MS-tabla-imposible.png]] </span>
+![[MS-tabla-imposible.png]]
 
-<span class="centerImg"> ![[Ms-tabla-otro-ej.png]] </span>
+![[Ms-tabla-otro-ej.png]]
 
 >[!note] Nota
 >Las situaciones imposibles ocurren, ya que en el tipo de tablas de decisiones simples las situaciones solo pueden tener dos estas, y se van rellenando como si fuera una tabla lógica.
