Se agrego lo que faltaba a SO

--- a/3° Año/Metodología de Sistemas I/Unidad 4/1. Herramientas para la documentación de procesos..md
+++ b/3° Año/Metodología de Sistemas I/Unidad 4/1. Herramientas para la documentación de procesos..md
@@ -15,7 +15,7 @@ Para realizar estas especificaciones existen diversas herramientas, como por eje
 
 - **Árboles de Decisión**: Permiten identificar y organizar las ***condiciones*** y ***acciones*** en un proceso de decisión completamente estructurado. Son útiles cuando es imprescindible mantener una cadena de decisiones en una secuencia específica. Este tipo de estructuras se lee de izquierda a derecha, las condiciones se representan en forma de círculos y las acciones con cuadrados.
 
-<span class="centerImg"> ![[MS-arbol-decision.png]] </span>
+![[MS-arbol-decision.png]]
 
 >[!note] Ventajas y Ejemplo Práctico
 >- Es fácil de entender y resulta mucho más conveniente cuando se tiene estructuras de decisiones más grandes y complejas.
