--- a/3° Año/Sistemas Operativos/Unidad 2/2. Planeamiento de Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/2. Planeamiento de Procesos.md
@@ -52,38 +52,80 @@ Para la planificación existen módulos del Sistema Operativo que eligen un proc
 
 ## Algoritmos de Planificación
 
-- **First Came, First Served (FCFS)**: El procesador atiende a un proceso hasta que termina su ejecución y luego atiende al que sigue en la cola de listos. Características:
-	- Es justa, atiende a todos los procesos.
-	- Es una política predecible.
-	- Los procesos largos hacen esperar a los cortos.
+#### First Came, First Served (FCFS)
+
+El procesador atiende a un proceso hasta que termina su ejecución y luego atiende al que sigue en la cola de listos. Características:
+
+- Es justa, atiende a todos los procesos.
+- Es una política predecible.
+- Los procesos largos hacen esperar a los cortos.
+- Es una política apropiativa.
 
 ![[SO-FCFS.png]]
 
-- **Shortest Job First (SJF)**: Toma de la cola de procesos listos el que necesite menos tiempo de ejecución para realizar su trabajo. El tiempo de ejecución de un proceso se puede saber por el propio programa, por usuario o ejecución anterior. Si dos procesos tienen el mismo tiempo de ejecución, se desempatan usando el método FCFS. Características:
-	- Es injusta con procesos largos.
-	- Es poco predecible.
-	- Difícil puesta en práctica por la información que necesita.
+#### Shortest Job First (SJF)
+
+Toma de la cola de procesos listos el que necesite menos tiempo de ejecución para realizar su trabajo. El tiempo de ejecución de un proceso se puede saber por el propio programa, por usuario o ejecución anterior. Si dos procesos tienen el mismo tiempo de ejecución, se desempatan usando el método FCFS. Características:
+
+- Es injusta con procesos largos.
+- Es poco predecible.
+- Difícil puesta en práctica por la información que necesita.
+- Es una política apropiativa.
 
 ![[SO-SJF.png]]
 
-- **Shortest Remaining Time First (SRTF)**: Cambia el proceso que está en ejecución, cuando llega un proceso con una exigencia más corta en el tiempo de ejecución de lo que resta para finalizar al proceso en ejecución. Es una mejora del SJF. Características:
-	- Es muy eficiente.
-	- Excelente tiempo medio de servicio.
-	- Puede ser injusta, ya que un proceso corto puede sacar a uno largo que esté ejecutándose y tal vez terminándose.
+#### Shortest Remaining Time First (SRTF)
+
+Cambia el proceso que está en ejecución, cuando llega un proceso con una exigencia más corta en el tiempo de ejecución de lo que resta para finalizar al proceso en ejecución. Es una mejora del SJF. Características:
+
+- Es muy eficiente.
+- Excelente tiempo medio de servicio.
+- Puede ser injusta, ya que un proceso corto puede sacar a uno largo que esté ejecutándose y tal vez terminándose.
+- Es una política no apropiativa.
 
 ![[SO-SRTF.png]]
 
-- **Round Robin**: Consiste en conceder a cada proceso en ejecución un determinado período de tiempo ***q(quantum)***, luego del cual si el proceso no terminó se lo devuelve al final de la cola de procesos listos.
-	- Si el So posee cambios de contextos eficientes, este método presenta baja sobrecarga.
-	- Es más utilizada en SO de tiempo compartido.
-	- El tamaño del quántum dependerá del tipo de sistema, las cargas que soporte el mismo y el número de procesos en el sistema.
+#### Round Robin
+
+Consiste en conceder a cada proceso en ejecución un determinado período de tiempo ***q(quantum)***, luego del cual si el proceso no terminó se lo devuelve al final de la cola de procesos listos.
+
+- Si el So posee cambios de contextos eficientes, este método presenta baja sobrecarga.
+- Es más utilizada en SO de tiempo compartido.
+- El tamaño del quántum dependerá del tipo de sistema, las cargas que soporte el mismo y el número de procesos en el sistema.
+- Es una política no aporpiativa.
 
 ![[SO-RR.png]]
 
-- **Planificación por Prioridades**: Se asigna el procesador al proceso con mayor prioridad. El principal problema de esta política es la postergación indefinida de los procesos con baja prioridad, para solucionar esto existe el ***envejecimiento de las prioridades*** que aumenta gradualmente las prioridades de los procesos listos y ante iguales prioridades atiende al proceso más antiguo. Este método se puede emplear de dos formas:
+#### Planificación por Prioridades
+
+Se asigna el procesador al proceso con mayor prioridad. El principal problema de esta política es la postergación indefinida de los procesos con baja prioridad, para solucionar esto existe el ***envejecimiento de las prioridades*** que aumenta gradualmente las prioridades de los procesos listos y ante iguales prioridades atiende al proceso más antiguo. Este método se puede emplear de dos formas:
 	- Sin desalojo.
 	- Con desalojo
 
 ![[SO-PSD.png]]
 
 ![[SO-PCD.png]]
+
+
+#### Colas Múltiples
+
+También existen otro forma de implementar la planeación de procesos. Uno de estos métodos es utilizando ***colas múltiples*** donde se agrupan los procesos en distintos grupos, asignándolos en distintas colas según las necesidades y tipo. Por ejemplo, se hace una cola para procesos preparados en primer plano y otra de preparados en segundo plano, cada cola tiene su propio algoritmo de planificación, que puede ser el Round Robin y otro el FCFS.
+
+![[SO-colas-multiples.png]]
+
+#### Colas Múltiples con Retroalimentación
+
+Se dividen a los procesos en varias colas de procesos preparados: cola 0, cola 1, cola 2, etc.; las colas con numeración más baja tendrán mayor prioridad, permitiendo pasar a un proceso de una cola de menor prioridad a otra de mayor prioridad.
+
+- Esta política soporta bien la sobrecarga.
+- Es una política no apropiativa.
+- Es adaptable a las necesidades del sistema.
+
+![[SO-colas-multiples-2.png]]
+
+### Planificación de Múltiples Procesadores
+
+Si el sistema cuenta con más de un procesador, la planificación en la asignación del procesador se torna mucho más compleja. Una posible solución a este problema sería creando una cola para cada procesador, pero puede darse el caso de una cola vacía y esto redunda en un procesador ocioso.
+
+- **Multiprocesamiento simétrico**: Por lo general se usa una sola cola en la que van ingresando los procesos y se les asigna cualquier procesador que está libre.
+- **Multiprocesamiento asimétrico**: Se designa a un procesador como administrador, el cual mantiene ocupado siempre a los demás procesadores.
